# SVGStationPlanEditor

./: CMakeLists.txt  README.md  TestSVGEntity.pro  connectionmanager.cpp  customsvgnodefinder.cpp  customsvgnodefinder.h  customsvgwidget.cpp  customsvgwidget.h  elementclass.cpp  elementclass.h  main.cpp  mainwindow.cpp  mainwindow.h  nodefindeditingmodes.h  nodefinderdockwidget.cpp  nodefinderdockwidget.h  nodefinderelementclass.cpp  nodefinderelementclass.h  nodefinderelementwalker.cpp  nodefinderlabelmodel.cpp  nodefinderlabelmodel.h  nodefindermgr.cpp  nodefindermgr.h  nodefinderstationtracksmodel.cpp  nodefinderstationtracksmodel.h  nodefinderstatuswidget.cpp  nodefinderstatuswidget.h  nodefindersvgconverter.cpp  nodefindersvgconverter.h  nodefindersvgwidget.cpp  nodefindersvgwidget.h  nodefinderutils.h  svgtinyconverter.cpp  svgtinyconverter.h  svgutils.h
database/: connectionmanager.h  database.pri
editor/: CMakeLists.txt  editor.pri  editor.pro  main.cpp  mainwindow.cpp  mainwindow.h
editor/manager/: CMakeLists.txt  elementsplitterhelper.cpp  elementsplitterhelper.h  manager.pri  nodefinderelementclass.cpp  nodefinderelementclass.h  nodefinderelementwalker.cpp  nodefinderelementwalker.h  nodefindermgr.cpp  nodefindermgr.h  nodefindersvgconverter.cpp  nodefindersvgconverter.h
editor/model/: CMakeLists.txt  iobjectmodel.cpp  iobjectmodel.h  model.pri  nodefinderlabelmodel.cpp  nodefinderlabelmodel.h  nodefinderstationtracksmodel.cpp  nodefinderstationtracksmodel.h  nodefinderturnoutmodel.cpp  nodefinderturnoutmodel.h
editor/svg_creator/: CMakeLists.txt  abstractlayoutitem.cpp  abstractlayoutitem.h  platformitem.cpp  platformitem.h  svgcreatormanager.cpp  svgcreatormanager.h  svgcreatorscene.cpp
editor/svg_creator/model/: CMakeLists.txt  abstractlayoutitem.h  itempropertieswidget.cpp  itempropertieswidget.h  svgconnectionsmodel.cpp  svgconnectionsmodel.h  svgcreatorscene.cpp  svgcreatorscene.h  svgcreatorsvgwriter.cpp  svgcreatorsvgwriter.h
editor/svg_creator/model/items/: CMakeLists.txt  platformitem.cpp  platformitem.h
editor/utils/: CMakeLists.txt  comboboxdelegate.cpp  comboboxdelegate.h  completiondelegate.cpp  completiondelegate.h  ieditor.cpp  ieditor.h  nodefindereditingmodes.h  pathutils.cpp  pathutils.h  svgutils.cpp  utils.pri
editor/view/: CMakeLists.txt  nodefinderdockwidget.cpp  nodefinderdockwidget.h  nodefinderstatuswidget.cpp  nodefinderstatuswidget.h  nodefindersvgwidget.cpp  nodefindersvgwidget.h  view.pri
utils/: nodefindereditingmodes.h  nodefindertypes.h  nodefinderutils.h  pathutils.cpp  pathutils.h  svgutils.cpp  svgutils.h  utils.pri
viewer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  viewer.pro
